Fixed spacing in profile.

--- a/frontend/src/Profile.css
+++ b/frontend/src/Profile.css
@@ -5,7 +5,6 @@ body {
 
 .user-greeting{
     text-align: center;
-    margin-top: 20px;
     color: rgb(124, 197, 228);
 }
 
